[project]
name = "visualization"
version = "0.1.0"
description = "MongoDB Data Visualization Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.3",
    "pymongo>=4.15.3",
    "streamlit>=1.28.0",
    "pandas>=2.1.0",
    "wordcloud>=1.9.2",
    "pillow>=10.0.0",
    "plotly>=6.3.1",
]
